--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+.github export-ignore
+
 .gitattributes export-ignore
 README.md export-ignore
 preview.jpg export-ignore
+FUNDING.yml export-ignore
